# dash-classification-app

./: .gitignore  README.md  classification_app.py  classification_app.spec  pyproject.toml  requirements.txt
dataset/: dataset1_RC_Deep_Beam_Shear_Strength.xlsx  dataset3_Old_Pipeline_Failure_Pressure.xlsx  dataset4_RC Short_Wall_Shear_Strength.xlsx  数据集2_RC墩柱破坏模式预测.xlsx  数据集5_新旧混凝土界面抗剪强度预测.xlsx  数据集6_桥梁震后损伤状态预测.xlsx
utils/: figures.py
